# [workspace]
# members = ["./macros"]

[workspace.package]
version = "0.1.3"
license = "MIT"
edition = "2021"

[package]
name = "esql"
description = "Useful and lightweight database extension library for your Rust project"
keywords = ["database", "async", "postgres", "mysql"]
categories = ["database", "asynchronous"]
version.workspace = true
license.workspace = true
edition.workspace = true

[features]
mysql-async = [ "dep:mysql_async", "dep:mysql_common" ]
qp-postgres = [ "dep:qp-postgres" ]
time = [ "dep:time", "tokio-postgres/with-time-0_3" ]
serde-json = [ "dep:serde_json", "tokio-postgres/with-serde_json-1" ]
tokio-postgres = [ "dep:tokio-postgres" ]
uuid = [ "dep:uuid", "tokio-postgres/with-uuid-1" ]

[dependencies]
futures-util = { version = "0.3", default-features = false }
thiserror = "1.0"
serde = "1.0"

[dependencies.mysql_async]
version = "0.34"
features = ["minimal"]
default-features = false
optional = true

[dependencies.mysql_common]
version = "0.32"
optional = true

[dependencies.qp-postgres]
version = "0.1"
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.tokio-postgres]
version = "0.7"
default-features = false
optional = true

[dependencies.time]
version = "0.3"
features = ["formatting", "serde"]
optional = true

[dependencies.uuid]
version = "1.10"
features = ["serde"]
optional = true